switch back to StandardAnalyser and configure App default one

--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -1,3 +1,5 @@
 APP.Jersey.Resources=org.mycore.lookup.api.resource
 APP.Jersey.Features=
 APP.Jersey.DynamicEntities=org.mycore.lookup.api.entity
+
+Index.Analyser=org.apache.lucene.analysis.de.GermanAnalyzer
