--- a/pom.xml
+++ b/pom.xml
@@ -292,6 +292,7 @@
       <groupId>org.apache.lucene</groupId>
       <artifactId>lucene-analyzers-common</artifactId>
       <version>${lucene.version}</version>
+      <scope>runtime</scope>
     </dependency>
 
     <dependency>
